--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,8 +1,13 @@
 body {
-  background-color: lightblue;
+  background-color: purple;
 }
 
 h1 {
-  color: navy;
+  color: white;
   margin-left: 20px;
+}
+
+.center {
+  text-align: center;
+  color: black;
 }
