--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,70 +1,14 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial;
-  margin: 0;
-}
-
-/* Header */
-header {
-  padding: 60px;
-  text-align: center;
-  background: #7E6A94;
-  color: white;
-}
-
-/* Top navigation bar */
-.navbar {
+.container {
   display: flex;
-  background-color: #333;
+  background-color: purple;
 }
 
-/* Navigation bar links */
-.navbar a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.container {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Sidebar/left column */
-.side {
-  flex: 30%;
+.container div {
   background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-footer {
-  padding: 20px;
+  color:#000;
+  width: 100px;
+  margin: 10px;
+  padding: 10px;
   text-align: center;
-  background: #ddd;
+  font-size: 30px;
 }
