--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,14 +1,14 @@
 .container {
   display: flex;
+  flex-direction: row;
   background-color: #7e6a94;
 }
 
 .container div {
   background-color: #f1f1f1;
-  color:#000;
   width: 100px;
   margin: 10px;
   padding: 10px;
-  text-align: center;
+  text-align: center;  
   font-size: 30px;
 }
