--- a/css-grid.css
+++ b/css-grid.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: purple;
   padding: 5px;
   gap: 5px;
